--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vaultfolio-ai</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FRM-AI</title>
+    <meta name="description" content="FRM-AI: Financial Risk Management AI" />
+    <meta name="author" content="Khoi" />
 
-    <meta property="og:title" content="vaultfolio-ai" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+    <meta property="og:title" content="FRM-AI: Financial Risk Management AI" />
+    <meta property="og:description" content="Support financial decision-making with AI-driven insights." />
+    <meta property="og:type" content="website" /> 
+    <meta property="og:image" content="/logo.png" />
+    
+  <!-- Favicon links -->
+  <!-- Use PNG favicon from /public and add a version to bust cache -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    </head>
 
   <body>
     <div id="root"></div>
